# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_library.gni")

rustc_library("virtio_device") {
  name = "virtio_device"
  version = "0.1.0"
  edition = "2018"

  deps = [
    #    "//garnet/bin/guest/vmm/fidl:fuchsia.guest.device-rustc",
    #    "//garnet/public/lib/fidl/rust/fidl",
    #    "//garnet/public/rust/fdio",
    #    "//garnet/public/rust/fuchsia-app",
    #    "//garnet/public/rust/fuchsia-async",
    #    "//garnet/public/rust/fuchsia-syslog",
    #    "//garnet/public/rust/fuchsia-zircon",
    "//third_party/rust-crates/rustc_deps:crossbeam",
    "//third_party/rust-crates/rustc_deps:failure",
    "//third_party/rust-crates/rustc_deps:futures-preview",
    "//third_party/rust-crates/rustc_deps:parking_lot",
    "//garnet/public/rust/zerocopy",
  ]

  #  with_unit_tests = true
}
